# access-hub-monorepo

./: .gitignore  LICENSE  README.md  docker-compose.yaml
plate-intelligence-service/: .coveragerc  .dockerignore  Dockerfile  README.md  pyproject.toml
plate-intelligence-service/src/: main.py
plate-intelligence-service/src/core/: __init__.py
plate-intelligence-service/src/infrastructure/: __init__.py
recognize-plate-service/: .coveragerc  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
recognize-plate-service/configuration/: __init__.py  logging_config.py  storage_config.py
recognize-plate-service/consumer/: __init__.py  ocr_consumer.py
recognize-plate-service/core/: __init__.py
recognize-plate-service/core/config/: __init__.py  logger.py  settings.py  storage.py
recognize-plate-service/core/service/: __init__.py  ocr_service.py  plate_service.py  pre_processor_image_service.py
recognize-plate-service/core/usecase/: recognize_use_case.py
recognize-plate-service/decorators/: __init__.py  plate_pipeline_decorator.py
recognize-plate-service/infra/: __init__.py
recognize-plate-service/infra/brokers/: __init__.py  rabbitmq_config.py  rabbitmq_connector.py  rabbitmq_consumer.py  rabbitmq_enums.py  rabbitmq_event_publisher.py  rabbitmq_producer.py
recognize-plate-service/pipelines/: __init__.py  plate_pipeline.py
recognize-plate-service/schemas/: __init__.py  ocr.py  plate.py  request.py
recognize-plate-service/service/: __init__.py  ocr_service.py  plate_service.py
recognize-plate-service/src/: main.py
(+688 files in other folders)
