[project]
name = "plate-intelligence-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.2.1",
    "pika>=1.4.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "--cov=src"
