[project]
name = "recognize-plate-service"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

dependencies = [
    "easyocr",
    "opencv-python-headless",
    "numpy",
    "pydantic",
    "pika",
    "python-dotenv>=1.2.2",
    "torch",
    "torchvision",
    "pydantic-settings>=2.14.1",
    "requests>=2.33.1",
]